# prompt-firewall

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_firewall/: cli.py
tests/: test_basic.py
