[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-firewall"
version = "0.1.0"
description = "Stop leaking secrets into AI prompts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Debraj Mukherjee" }]
keywords = [
  "ai",
  "cli",
  "developer-tools",
  "dlp",
  "llm",
  "open-source",
  "privacy",
  "prompt",
  "redaction",
  "security",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
prompt-firewall = "prompt_firewall.cli:main"

[project.urls]
Homepage = "https://github.com/debraj-m/prompt-firewall"
Issues = "https://github.com/debraj-m/prompt-firewall/issues"

[tool.setuptools.packages.find]
where = ["src"]
